<?php
namespace App\Models;
use Illuminate\Database\Eloquent\Model;

class PersonalQuestion extends Model {
    protected $guarded = [];
    protected $casts = [
        'opsi' => 'array',
    ];
    public function user() { return $this->belongsTo(User::class); }
}