<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Database\Factories\UserFactory;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;

class User extends Authenticatable
{
    /** @use HasFactory<UserFactory> */
    use HasFactory, Notifiable;

    public const ROLE_SISWA = 'siswa';
    public const ROLE_GURU = 'guru';
    public const ROLE_SUPERADMIN = 'superadmin';

    public const STATUS_PENDING = 'pending';
    public const STATUS_ACTIVE = 'active';
    public const STATUS_SUSPEND = 'suspend';

    /**
     * The attributes that are mass assignable.
     *
     * @var list<string>
     */
    protected $fillable = [
        'name',
        'email',
        'password',
        'role',
        'account_status',
        'access_token',
        'jenjang',
        'tingkat',
        'satuan_pendidikan',
        'no_wa',
        'avatar',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var list<string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * Get the attributes that should be cast.
     *
     * @return array<string, string>
     */
    protected function casts(): array
    {
        return [
            'email_verified_at' => 'datetime',
            'password' => 'hashed',
            'bookmarks' => 'array',
        ];
    }

    public function isSuperadmin(): bool
    {
        return $this->role === self::ROLE_SUPERADMIN;
    }

    public function isGuru(): bool
    {
        return $this->role === self::ROLE_GURU;
    }

    public function exams()
    {
        return $this->hasMany(Exam::class, 'user_id');
    }

    public function createdPaketSoals()
    {
        return $this->hasMany(PaketSoal::class, 'created_by');
    }

    public function personalQuestions()
    {
        return $this->hasMany(PersonalQuestion::class);
    }

    public function sentChats()
    {
        return $this->hasMany(Chat::class, 'from_user_id');
    }

    public function receivedChats()
    {
        return $this->hasMany(Chat::class, 'to_user_id');
    }
}
